Mostly fine with the spacing, although running into the same overlapping issue on mobile as before

--- a/app.css
+++ b/app.css
@@ -130,6 +130,13 @@ display: flex;
 justify-content: center;
 align-items: center;
 flex-direction: column;
+width: 150px;
+
+}
+
+.spaceEvenly{
+
+justify-content: space-evenly;
 
 }
 .outlineSubtext {
@@ -227,7 +234,18 @@ height: 450px;
         }
 
 
+.container{
 
+min-width: 480px;
+
+
+}
+
+.row {
+
+max-width: 480px;
+
+}
 
 
 }
